--- a/gb/ncid280_5.md
+++ b/gb/ncid280_5.md
@@ -19,6 +19,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/21/n11469005.md#1" target="_blank">江苏35万头死猪埋渔村臭气熏天 村民维权</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/21/n11469005.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/IMG_7986-150x120.jpg" align ="left"></a>近日，江苏南通市如东县丰利镇环渔村的村民被死猪腐尸臭味熏得忍无可忍，数百村民每天守在填埋死猪现场，阻止运输死猪的车辆进入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月22日 6:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/21/n11467476.md#1" target="_blank">四川暴雨 阿坝州至少8死26失踪</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/21/n11467476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/wenchuan-1-600x400-1-150x120.jpg" align ="left"></a>近期，四川全省下暴雨，其中，阿坝州“8·20”暴雨已造成8人死亡，26人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月21日 3:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/20/n11466009.md#1" target="_blank">四川暴雨 汶川4人遇难 11人失联</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/20/n11466009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/wenchuan-1-150x120.jpg" align ="left"></a>四川多地遭到暴雨袭击。汶川目前至少有4人遇难，11人失联；卧龙特区境内7人失联，2人重伤；刘家房基处1人失踪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月21日 12:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/3/n11565381.md#1" target="_blank">浓雾天气 安徽17车连环相撞 至少10人死</a><br></h3>10月3日上午6时40分，因浓雾天气，安徽宁洛高速公路蚌埠段往南京方向196公里处，发生4宗连环车祸，17车相撞，导致10死7伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月03日 8:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/25/n11546125.md#1" target="_blank">河南艾滋血祸揭露者王淑平在美国去世</a><br></h3>9月21日，王淑平医生与丈夫、朋友在美国犹他州盐湖城郊游时，不幸心脏病突发去世，年仅59周岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月26日 12:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/9/22/n11538408.md#1" target="_blank">湖南大货车冲入集市人群 至少10死16伤</a><br></h3>湖南湘潭市9月22日一早发生严重车祸，一辆货车撞向赶集的人群，多人被卷至车底。截止大纪元发稿，事故造成至少10死16伤。
 
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/29/n11484684.md#1" target="_blank">海南儋州市那大镇突发龙卷风 至少8死2伤</a><br></h3>8月29日凌晨3时半左右，海南儋州市市区中兴大街与工业路交叉口附近区域突发龙卷风，导致那大镇两处工地宿舍倒塌，8人死亡，2人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 12:36 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/28/n11482732.md#1" target="_blank">杭州一小区路面突然塌陷 居民楼倾斜</a><br></h3>8月28日，浙江省杭州闹市区的建国北路树园小区门口路段突然出现地面塌陷，冒出大量黄烟，该小区31幢出现倾斜。同一天，广东省深圳罗湖区和平新居一栋6层单身公寓楼也突然倾斜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 6:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/26/n11477954.md#1" target="_blank">广东大巴车翻车 至少7死11伤</a><br></h3>8月26日0时许，一辆大巴车在广东阳江境内的沈海高速路上发生侧翻事故，导致至少7死11伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月26日 2:58 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/8/20/n11465774.md#1" target="_blank">中国旅行团老挝遇车祸 14死31伤</a><br></h3>8月19日下午，一辆载有中国游客的老挝当地旅游大巴在从万象市前往琅勃拉邦市途中发生严重车祸，遇难人数已上升至14人，31名伤员已到当地医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 9:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_5.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/ncid280_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_5.htm">http://www.epochtimes.com/gb/ncid280_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
